--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,4 +10,7 @@
   "prettier.singleQuote": true,
   "prettier.useTabs": true,
   "prettier.bracketSpacing": true,
+  "cSpell.words": [
+    "Unconcosuis"
+  ],
 }
